--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
-  shared_preferences: ^2.0.15
+  firebase_core: ^1.20.1
+  cloud_firestore: ^3.4.4
+  pie_chart: ^5.3.2
+  charts_flutter: ^0.12.0
+
 
 dev_dependencies:
   flutter_test:
