--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^3.4.4
   pie_chart: ^5.3.2
   charts_flutter: ^0.12.0
+  firebase_auth: ^3.6.4
 
 
 dev_dependencies:
